deployvnet.json
{
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "vpnType": {
        "type": "string",
        "metadata": {
          "description": "Route based or policy based"
        },
        "defaultValue": "RouteBased",
        "allowedValues": [
          "RouteBased",
          "PolicyBased"
        ]
      },
      "localGatewayName": {
        "type": "string",
        "defaultValue": "localGateway",
        "metadata": {
          "description": "Arbitrary name for gateway resource representing"
        }
      },
      "localGatewayIpAddress": {
        "type": "string",
        "defaultValue": "1.1.1.1",
        "metadata": {
          "description": "Public IP of your StrongSwan Instance"
        }
      },
      "localAddressPrefix": {
        "type": "array",
        "defaultValue": [
          "192.162.0.0/16",
          "172.16.0.0/12"
        ],
        "metadata": {
          "description": "CIDR block representing the address space of the OnPremise VPN network's Subnet"
        }
      },
    "vnetName": {
      "type": "string",
      "defaultValue": "TestVNet",
      "metadata": {
        "description": "Name for the new VNet."
      }
    },
    "vnetPrefix": {
      "type": "string",
      "defaultValue": "192.168.0.0/16",
      "metadata": {
        "description": "CIDR prefix for the VNet address space."
      }
    },
    "frontEndSubnetName": {
      "type": "string",
      "defaultValue": "FrontEnd",
      "metadata": {
        "description": "Name for the front end subnet."
      }
    },
    "frontEndSubnetPrefix": {
      "type": "string",
      "defaultValue": "192.168.0.0/18",
      "metadata": {
        "description": "CIDR address prefix for the front end subnet."
      }
    },
    "backEndSubnetName": {
      "type": "string",
      "defaultValue": "BackEnd",
      "metadata": {
        "description": "Name for the back end subnet."
      }
    },
    "backEndSubnetPrefix": {
      "type": "string",
      "defaultValue": "192.168.64.0/18",
      "metadata": {
        "description": "CIDR address prefix for the back end subnet."
      }
    },
    "gatewaySubnetPrefix": {
        "type": "string",
        "defaultValue": "192.168.128.0/18",
        "metadata": {
          "description": "CIDR block for gateway subnet, subset of azureVNetAddressPrefix address space"
        }
      },
      "gatewayPublicIPName": {
        "type": "string",
        "defaultValue": "azureGatewayIP",
        "metadata": {
          "description": "Arbitrary name for public IP resource used for the new azure gateway"
        }
      },
      "gatewayName": {
        "type": "string",
        "defaultValue": "azureGateway",
        "metadata": {
          "description": "Arbitrary name for the new gateway"
        }
      },
      "gatewaySku": {
        "type": "string",
        "defaultValue": "Basic",
        "allowedValues": [
          "Basic",
          "Standard",
          "HighPerformance"
        ],
        "metadata": {
          "description": "The Sku of the Gateway. This must be one of Basic, Standard or HighPerformance."
        }
      },
      "connectionName": {
        "type": "string",
        "defaultValue": "Azure2Other",
        "metadata": {
          "description": "Arbitrary name for the new connection between Azure VNet and other network"
        }
      },
      "sharedKey": {
        "type": "securestring",
        "defaultValue": "Justakey",
        "metadata": {
          "description": "Shared key (PSK) for IPSec tunnel"
        }
      },
    "frontEndNSGName": {
      "type": "string",
      "defaultValue": "NSG-BackEnd",
      "metadata": {
        "description": "Name for the NSG used to allow remote RDP"
      }
    },
    "backEndNSGName": {
      "type": "string",
      "defaultValue": "NSG-FrontEnd",
      "metadata": {
        "description": "Name for the NSG used to allow access to web servers on port 80"
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
          "description": "Specifies the location in which the Azure Storage resources should be deployed."
      }
  }
  },
  "variables": {
    "gatewaySubnetRef": "[resourceId('Microsoft.Network/virtualNetworks/subnets/', parameters('vnetName'),'GatewaySubnet')]",
    "frsubnetId": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('frontEndSubnetName'))]"
  },
  "resources": [
    {
        "apiVersion": "2020-08-01",
        "type": "Microsoft.Network/localNetworkGateways",
        "name": "[parameters('localGatewayName')]",
        "location": "[parameters('location')]",
        "properties": {
          "localNetworkAddressSpace": {
            "addressPrefixes": "[parameters('localAddressPrefix')]"
          },
          "gatewayIpAddress": "[parameters('localGatewayIpAddress')]"
        }
      },
      {
        "apiVersion": "2020-07-01",
        "name": "[parameters('connectionName')]",
        "type": "Microsoft.Network/connections",
        "location": "[parameters('location')]",
        "dependsOn": [
          "[resourceId('Microsoft.Network/virtualNetworkGateways/', parameters('gatewayName'))]",
          "[resourceId('Microsoft.Network/localNetworkGateways/', parameters('localGatewayName'))]"
        ],
        "properties": {
          "virtualNetworkGateway1": {
            "id": "[resourceId('Microsoft.Network/virtualNetworkGateways', parameters('gatewayName'))]"
          },
          "localNetworkGateway2": {
            "id": "[resourceId('Microsoft.Network/localNetworkGateways', parameters('localGatewayName'))]"
          },
          "connectionType": "IPsec",
          "routingWeight": 10,
          "sharedKey": "[parameters('sharedKey')]"
        }
      },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('backEndNSGName')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "NSG - Remote Access"
      },
      "properties": {
        "securityRules": [
          {
            "name": "allow-frontend",
            "properties": {
              "description": "Allow FE Subnet",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "[parameters('frontEndSubnetPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-gateway-subnet",
            "properties": {
              "description": "Allow Onpremises traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('gatewaySubnetPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Inbound"
            }
          },
          {
            "name": "block-internet",
            "properties": {
              "description": "Block Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Deny",
              "priority": 300,
              "direction": "Outbound"
            }
          }

        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('frontEndNSGName')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "NSG - Front End"
      },
      "properties": {
        "securityRules": [
          {
            "name": "rdp-rule",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-gateway-subnet",
            "properties": {
              "description": "Allow Onpremises traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('gatewaySubnetPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Inbound"
            }
          },
          {
            "name": "web-rule",
            "properties": {
              "description": "Allow WEB",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2018-04-01",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[parameters('vnetName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkSecurityGroups/', parameters('frontEndNSGName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', parameters('backEndNSGName'))]"
      ],
      "tags": {
        "displayName": "VNet"
      },
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('vnetPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[parameters('frontEndSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('frontEndSubnetPrefix')]",
              "privateEndpointNetworkPolicies": "Disabled",
              "delegations": [
                {
                  "name": "delegation",
                  "properties": {
                    "serviceName": "Microsoft.Web/serverFarms"
                  }
                }
              ],
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('frontEndNSGName'))]"
              }
            }
          },
          {
            "name": "[parameters('backEndSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('backEndSubnetPrefix')]",
              "serviceEndpoints": [
                {
                    "service": "Microsoft.AzureCosmosDB",
                    "locations": [
                        "[variables('Location')]"
                    ]
                }
            ],
              "privateEndpointNetworkPolicies": "Disabled",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('backEndNSGName'))]"
              }
            }
          },
          {
            "name": "GatewaySubnet",
            "properties": {
              "addressPrefix": "[parameters('gatewaySubnetPrefix')]"
            }
        }
        ]
      }     
    },
    {
        "apiVersion": "2015-06-15",
        "type": "Microsoft.Network/publicIPAddresses",
        "name": "[parameters('gatewayPublicIPName')]",
        "location": "[parameters('location')]",
        "properties": {
          "publicIPAllocationMethod": "Dynamic"
        }
      },
      {
        "apiVersion": "2015-06-15",
        "type": "Microsoft.Network/virtualNetworkGateways",
        "name": "[parameters('gatewayName')]",
        "location": "[parameters('location')]",
        "dependsOn": [
          "[resourceId('Microsoft.Network/publicIPAddresses/', parameters('gatewayPublicIPName'))]",
          "[resourceId('Microsoft.Network/virtualNetworks/', parameters('vnetName'))]"
        ],
        "properties": {
          "ipConfigurations": [
            {
              "properties": {
                "privateIPAllocationMethod": "Dynamic",
                "subnet": {
                  "id": "[variables('gatewaySubnetRef')]"
                },
                "publicIPAddress": {
                  "id": "[resourceId('Microsoft.Network/publicIPAddresses',parameters('gatewayPublicIPName'))]"
                }
              },
              "name": "vnetGatewayConfig"
            }
          ],
          "sku": {
            "name": "[parameters('gatewaySku')]",
            "tier": "[parameters('gatewaySku')]"
          },
          "gatewayType": "Vpn",
          "vpnType": "[parameters('vpnType')]",
          "enableBgp": "false"
        }
      }
  ],
  "outputs": {
     "BKsubnetId": {
       "type": "string",
       "value":"[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('backEndSubnetName'))]"
                   },
      "FRsubnetId": {
        "type": "string",
        "value":"[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('frontEndSubnetName'))]"
                                }
            }
  }
